--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 
 # Open AI key - reads from environment variable (set in .env file)
-openai.api.key=${OPENAI_API_KEY}
+#openai.api.key=${OPENAI_API_KEY}
 
