--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,8 +42,8 @@ services:
       SPRING_DATASOURCE_USERNAME: postgres
       SPRING_DATASOURCE_PASSWORD: postgres
 
-      # ⭐ OpenAI API Key（will add in the future）
-      OPENAI_API_KEY: ${OPENAI_API_KEY}
+      #  OpenAI API Key（will add in the future）
+      #OPENAI_API_KEY: ${OPENAI_API_KEY}
 
     ports:
       - "8080:8080"
